// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colorsThemePlugin create theme data with one theme which doesn't exist in figma should create css files with css variables: /export-path/colors/contrastLight/vars.css 1`] = `
"
[data-theme='contrastLight'] {
  --sh-background-900-default: rgba(255, 255, 255, 1.00);
--sh-background-900-hover: rgba(245, 245, 245, 1.00);
--sh-text-900-default: rgba(30, 30, 30, 1.00);
--sh-text-900-hover: rgba(117, 117, 117, 1.00);
}"
`;

exports[`colorsThemePlugin create theme data with one theme which doesn't exist in figma should create css files with css variables: /export-path/colors/dark/vars.css 1`] = `
"
[data-theme='dark'] {
  --sh-background-900-default: rgba(30, 30, 30, 1.00);
--sh-background-900-hover: rgba(56, 56, 56, 1.00);
--sh-text-900-default: rgba(255, 255, 255, 1.00);
--sh-text-900-hover: rgba(255, 255, 255, 0.70);
}"
`;

exports[`colorsThemePlugin create theme data with one theme which doesn't exist in figma should create css files with css variables: /export-path/colors/light/vars.css 1`] = `
"
[data-theme='light'] {
  --sh-background-900-default: rgba(255, 255, 255, 1.00);
--sh-background-900-hover: rgba(245, 245, 245, 1.00);
--sh-text-900-default: rgba(30, 30, 30, 1.00);
--sh-text-900-hover: rgba(117, 117, 117, 1.00);
}"
`;

exports[`colorsThemePlugin create theme data with one theme which doesn't exist in figma should create css files with css variables: /export-path/colors/vars.css 1`] = `
"
:root {
  --sh-background-900-default: rgba(255, 255, 255, 1.00);
--sh-background-900-hover: rgba(245, 245, 245, 1.00);
--sh-text-900-default: rgba(30, 30, 30, 1.00);
--sh-text-900-hover: rgba(117, 117, 117, 1.00);
}"
`;

exports[`colorsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/colors/contrastLight/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {"background-900-default":"rgba(255, 255, 255, 1.00)","background-900-hover":"rgba(245, 245, 245, 1.00)","text-900-default":"rgba(30, 30, 30, 1.00)","text-900-hover":"rgba(117, 117, 117, 1.00)"};
    "
`;

exports[`colorsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/colors/dark/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {"background-900-default":"rgba(30, 30, 30, 1.00)","background-900-hover":"rgba(56, 56, 56, 1.00)","text-900-default":"rgba(255, 255, 255, 1.00)","text-900-hover":"rgba(255, 255, 255, 0.70)"};
    "
`;

exports[`colorsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/colors/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {"background-900-default":"rgba(255, 255, 255, 1.00)","background-900-hover":"rgba(245, 245, 245, 1.00)","text-900-default":"rgba(30, 30, 30, 1.00)","text-900-hover":"rgba(117, 117, 117, 1.00)"};
    "
`;

exports[`colorsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/colors/light/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {"background-900-default":"rgba(255, 255, 255, 1.00)","background-900-hover":"rgba(245, 245, 245, 1.00)","text-900-default":"rgba(30, 30, 30, 1.00)","text-900-hover":"rgba(117, 117, 117, 1.00)"};
    "
`;

exports[`colorsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/colors/with-vars.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {"background-900-default":"var(--sh-background-900-default,rgba(255, 255, 255, 1.00))","background-900-hover":"var(--sh-background-900-hover,rgba(245, 245, 245, 1.00))","text-900-default":"var(--sh-text-900-default,rgba(30, 30, 30, 1.00))","text-900-hover":"var(--sh-text-900-hover,rgba(117, 117, 117, 1.00))"};
    "
`;

exports[`colorsThemePlugin create theme data with one theme which doesn't exist in figma should create theme-list.ts files with themes' types: /export-path/themes-list.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    
// THIS FILE IS GENERATED AUTOMATICALLY. DON'T CHANGE IT.

export const DEFAULT_THEME = 'contrastLight';

export const THEMES = ['light', 'dark', 'contrastLight'] as const;  

export type Theme = typeof THEMES[number];
  
    "
`;

exports[`colorsThemePlugin should create css files with css variables: /export-path/colors/contrastLight/vars.css 1`] = `
"
[data-theme='contrastLight'] {
  --sh-background-900-default: rgba(255, 255, 255, 1.00);
--sh-background-900-hover: rgba(245, 245, 245, 1.00);
--sh-text-900-default: rgba(30, 30, 30, 1.00);
--sh-text-900-hover: rgba(117, 117, 117, 1.00);
}"
`;

exports[`colorsThemePlugin should create css files with css variables: /export-path/colors/dark/vars.css 1`] = `
"
[data-theme='dark'] {
  --sh-background-900-default: rgba(30, 30, 30, 1.00);
--sh-background-900-hover: rgba(56, 56, 56, 1.00);
--sh-text-900-default: rgba(255, 255, 255, 1.00);
--sh-text-900-hover: rgba(255, 255, 255, 0.70);
}"
`;

exports[`colorsThemePlugin should create css files with css variables: /export-path/colors/light/vars.css 1`] = `
"
[data-theme='light'] {
  --sh-background-900-default: rgba(255, 255, 255, 1.00);
--sh-background-900-hover: rgba(245, 245, 245, 1.00);
--sh-text-900-default: rgba(30, 30, 30, 1.00);
--sh-text-900-hover: rgba(117, 117, 117, 1.00);
}"
`;

exports[`colorsThemePlugin should create css files with css variables: /export-path/colors/vars.css 1`] = `
"
:root {
  --sh-background-900-default: rgba(255, 255, 255, 1.00);
--sh-background-900-hover: rgba(245, 245, 245, 1.00);
--sh-text-900-default: rgba(30, 30, 30, 1.00);
--sh-text-900-hover: rgba(117, 117, 117, 1.00);
}"
`;

exports[`colorsThemePlugin should create js files with css variables: /export-path/colors/contrastLight/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {"background-900-default":"rgba(255, 255, 255, 1.00)","background-900-hover":"rgba(245, 245, 245, 1.00)","text-900-default":"rgba(30, 30, 30, 1.00)","text-900-hover":"rgba(117, 117, 117, 1.00)"};
    "
`;

exports[`colorsThemePlugin should create js files with css variables: /export-path/colors/dark/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {"background-900-default":"rgba(30, 30, 30, 1.00)","background-900-hover":"rgba(56, 56, 56, 1.00)","text-900-default":"rgba(255, 255, 255, 1.00)","text-900-hover":"rgba(255, 255, 255, 0.70)"};
    "
`;

exports[`colorsThemePlugin should create js files with css variables: /export-path/colors/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {"background-900-default":"rgba(255, 255, 255, 1.00)","background-900-hover":"rgba(245, 245, 245, 1.00)","text-900-default":"rgba(30, 30, 30, 1.00)","text-900-hover":"rgba(117, 117, 117, 1.00)"};
    "
`;

exports[`colorsThemePlugin should create js files with css variables: /export-path/colors/light/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {"background-900-default":"rgba(255, 255, 255, 1.00)","background-900-hover":"rgba(245, 245, 245, 1.00)","text-900-default":"rgba(30, 30, 30, 1.00)","text-900-hover":"rgba(117, 117, 117, 1.00)"};
    "
`;

exports[`colorsThemePlugin should create js files with css variables: /export-path/colors/with-vars.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {"background-900-default":"var(--sh-background-900-default,rgba(255, 255, 255, 1.00))","background-900-hover":"var(--sh-background-900-hover,rgba(245, 245, 245, 1.00))","text-900-default":"var(--sh-text-900-default,rgba(30, 30, 30, 1.00))","text-900-hover":"var(--sh-text-900-hover,rgba(117, 117, 117, 1.00))"};
    "
`;

exports[`colorsThemePlugin should create theme-list.ts files with themes' types: /export-path/themes-list.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    
// THIS FILE IS GENERATED AUTOMATICALLY. DON'T CHANGE IT.

export const DEFAULT_THEME = 'contrastLight';

export const THEMES = ['light', 'dark', 'contrastLight'] as const;  

export type Theme = typeof THEMES[number];
  
    "
`;
